# BECuda

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: BECuda.cuh  constants.h  data.h  grid.cuh  kernels.cuh  wavefunction.cuh
python/: 2d_component_densities.py
src/: data.cpp  grid.cu  kernels.cu  wavefunction.cu
tests/: CMakeLists.txt  tests.cu
